@@ -1,5 +1,10 @@
 2007-07-30  Sven Neumann  <sven@gimp.org>
 
+	* libgimp/gimp.c
+	* libgimpbase/gimpwire.c: cosmetic changes.
+
+2007-07-30  Sven Neumann  <sven@gimp.org>
+
 	* app/core/gimpimage.c (gimp_image_drawable_update): cosmetics.
 
 2007-07-29  Sven Neumann  <sven@gimp.org>
